<resources>
    <string name="wallet_nickname">皮夾暱稱</string>
    <string name="nickname">暱稱</string>
    <string name="login_password">登入密碼</string>
    <string name="login">登入</string>
    <string name="create_wallet">建立皮夾</string>
    <string name="input_nickname_and_password">請輸入暱稱及登入密碼</string>
    <string name="input_passwrod">輸入皮夾密碼</string>
    <string name="input_password_please">請輸入皮夾密碼</string>
    <string name="input_password_again">請再次輸入皮夾密碼</string>
    <string name="msg_pincode_input_rule">僅能輸入 4 - 8 碼的數字</string>
    <string name="msg_pincode_input_error">僅能輸入 4 - 8 碼的數字</string>
    <string name="next_step">下一步</string>
    <string name="cancel">取消</string>
    <string name="msg_error_password_different">皮夾密碼與再次輸入密碼不相同，請確認後再次嘗試。</string>
    <string name="confirm">確認</string>
    <string name="msg_qrcode_parsing_failed">無法辨識此 QR-Code，請您再次確認是否為數位憑證皮夾核可的 QR-Code 的並重新掃描。</string>
    <string name="msg_qrcode_parsing_failed_by_vc">無可驗證的虛擬卡片</string>
    <string name="msg_third_require_information">下方為第三方要求的數位個資，可自行調整欲提供的個資。</string>
    <string name="send">送出</string>
    <string name="msg_another_exception">不明錯誤原因，請先確認網路狀態，或稍後再試。</string>
    <string name="msg_need_to_update_google_play_services">Google Play Services 可更新，請至Play進行更新。</string>
    <string name="msg_can_not_update_google_play_services">Google Play Services 已不可更新，請確認裝置是否支援。</string>
    <string name="start_using_the_digital_wallet">開始使用數位憑證皮夾</string>
    <string name="start_experiencing_now">現在就開始體驗！</string>
    <string name="digital_wallet_related_regulations">數位憑證皮夾相關規約</string>
    <string name="msg_digital_wallet_contract_first">開始使用前，看看數位憑證皮夾相關規約</string>
    <string name="msg_agree_contract_of_use">我同意軟體使用規章的條款與條例</string>
    <string name="msg_view_contract_of_use">數位憑證皮夾APP使用同意書</string>
    <string name="msg_agree_privacy_policy">我接受個人資料的隱私政策</string>
    <string name="msg_view_contract_of_profile_privacy">個人資料的隱私權政策</string>
    <string name="start_setting">開始設定</string>
    <string name="setting_notification">設定通知提醒</string>
    <string name="msg_setting_notification_hint">開啟通知提醒以獲得即時提示，當您收到以下訊息時，數位憑證皮夾 會給予通知提醒：\n\n・到期卡片通知\n\n備註：若不開啟，將無法即時接收到卡片通知。</string>
    <string name="skip_notification_setting">跳過通知設定</string>
    <string name="allow">允許</string>
    <string name="not_allow">不允許</string>
    <string name="msg_guideline_title_1">整合多元證件，無卡體驗日常服務</string>
    <string name="msg_guideline_title_2">一鍵防護，數位服務</string>
    <string name="msg_guideline_title_3">極致安全，讓你無後顧之憂！</string>
    <string name="msg_guideline_message_1">整合多元實體證件，讓你無卡體驗日常服務，不論你在哪，只要拿出手機打開數位憑證皮夾，就能隨時隨地使用，不用再擔心忘記帶證件出門，只需要掃 QR-Code，對方就能快速驗證你的身分，無論是就醫、租車，還是入住飯店，這一切都可以變得前所未有的輕鬆。</string>
    <string name="msg_guideline_message_2">數位憑證皮夾使用獨一無二的密碼鑰匙，彷彿數位保險箱，將各種數位證件、數位憑證妥善保存在手機裡面。未來你可以在多個網路服務間輕鬆把關資料的授權情形，無需每次都要註冊新帳號，或記憶新密碼。一個數位APP無限延展，打造前所未有的安全體驗。</string>
    <string name="msg_guideline_message_3">數位憑證皮夾絕對保護你的個人資料，利用「可驗證憑證」技術，確保你的憑證不會被偽造或篡改，讓你可以信任別人，也讓你可以為別人給信任。</string>
    <string name="security_warning">安全警告</string>
    <string name="msg_create_wallet_hint">建立你的皮夾並設置密碼，請保管好你的登入密碼不要洩漏給其他人，如果忘記密碼請重新設定你的數位憑證皮夾並重新加入憑證。</string>
    <string name="set_wallet_nickname">設定皮夾暱稱</string>
    <string name="setting_login_password">設定登入密碼</string>
    <string name="setting_login_password_again">再次輸入登入密碼</string>
    <string name="msg_nickname_rule_hint">僅能輸入中文、英文與數字，上限8個字。</string>
    <string name="wallet_name_error">皮夾名稱有誤</string>
    <string name="wallet_name_rule_changing_another">您輸入的皮夾名稱出現特殊符號，請確認後再次嘗試。</string>
    <string name="msg_register_biometric_title">要允許 Digital Wallet 使用「生物辨識」嗎？</string>
    <string name="msg_register_biometric_content">同意後未來將可以使用 指紋 解鎖 Digital Wallet，可以在「設定」中進行調整。</string>
    <string name="msg_login_biometric_title">生物辨識</string>
    <string name="msg_login_biometric_content">請以生物辨識進行登入驗證</string>
    <string name="msg_biometric_locked_content">您的生物辨識錯誤次數過多，為確保安全請至「個人化管理」中重新啟用生物辨識。</string>
    <string name="msg_biometric_none_enrolled_content">您的裝置尚未設定生物辨識，請先到系統設定中進行生物辨識設定。</string>
    <string name="prompt_message">提示訊息</string>
    <string name="error_message">錯誤訊息</string>
    <string name="card_overview">全部憑證</string>
    <string name="scan">掃描</string>
    <string name="setting">個人</string>
    <string name="add_the_first_card_now">馬上加入第一張憑證</string>
    <string name="msg_add_card_hint">點選「加入憑證」進行申請</string>
    <string name="loading_dot3">Loading...</string>
    <string name="scan_qrcode">掃描 QRCode</string>
    <string name="msg_scan_qrcode">請對準有效 QR-Code，將自動進行掃描</string>
    <string name="please_input_wallet_nickname">請輸入皮夾暱稱</string>
    <string name="msg_camera_permission_deny_warnning">很抱歉，由於掃描功能需要獲得您授與權限，否則無法執行該功能。是否要轉到『設定』進行授與？</string>
    <string name="card_has_expired">卡片已過期</string>
    <string name="untrustworthy_issuer">不可信任的issuer</string>
    <string name="vc_invalid">vc失效</string>
    <string name="issuer_signature_invalid">issuer簽章失效</string>
    <string name="holder_did_inconsistent">holder did不一致</string>
    <string name="issuing_unit">發卡單位</string>
    <string name="unmatch">未知</string>
    <string name="unknow">不明</string>
    <string name="new_to_old">由新到舊</string>
    <string name="old_to_new">由舊到新</string>
    <string name="add_verifiable_credential_success">已成功加入憑證</string>
    <string name="failed_to_join_the_credential">加入憑證失敗</string>
    <string name="verification_instructions">授權說明</string>
    <string name="validation_requirements_list">授權需求清單</string>
    <string name="start_verify">送出資料</string>
    <string name="personalized_management">個人化管理</string>
    <string name="about_digital_wallet">關於數位憑證皮夾</string>
    <string name="problem_center">問題中心</string>
    <string name="digital_wallet_image_website">數位憑證皮夾網站</string>
    <string name="log_out">登出</string>
    <string name="change_password">更改密碼</string>
    <string name="biometric_settings">生物辨識設定</string>
    <string name="notification_settings">通知設定</string>
    <string name="select_personal_data_you_want_to_provide">選擇要提供的個人資料</string>
    <string name="select_identity_card">選擇卡片：身分證明卡</string>
    <string name="please_check_the_selected_card">已選擇「身分證明卡」作為授權卡片，請勾選要提供的個人資料。</string>
    <string name="chinese_name">中文姓名</string>
    <string name="format_require_content">需求內容：%s</string>
    <string name="add_card">加入憑證</string>
    <string name="verification_application">授權申請</string>
    <string name="msg_verification_application">需提供具備以下授權清單所提出之所有需求的卡片，請點選「選擇卡片」以進行登入申請。</string>
    <string name="validation_requirements">授權需求</string>
    <string name="verification_card_list">授權卡片清單</string>
    <string name="select_provider_personal_data">選擇要提供的個人資料</string>
    <string name="format_select_require_field_hint">已選擇「%s」作為授權卡片，請勾選要提供的個人資料。</string>
    <string name="format_selected_card">選擇卡片：%s</string>
    <string name="select_card">選擇卡片：</string>
    <string name="reselect">重新選擇</string>
    <string name="credential_verifying">卡片授權中</string>
    <string name="verification_success">資料已授權</string>
    <string name="verification_fall">資料授權失敗</string>
    <string name="unknow_reason">未知的原因</string>
    <string name="msg_log_out">確定登出我的皮夾？</string>
    <string name="card_information_page">卡片資料頁</string>
    <string name="card_information">卡片資料</string>
    <string name="card_information_message">卡片資訊</string>
    <string name="hide_all">隱藏全部</string>
    <string name="show_all">顯示全部</string>
    <string name="delete_card">移除卡片</string>
    <string name="card_issue_web">卡片發行網站</string>
    <string name="format_are_you_sure_you_want_to_delete">是否要將「%s」從數位憑證皮夾中移除？確認後此動作不可恢復。</string>
    <string name="setting_password">設定密碼</string>
    <string name="msg_change_pincode_hint">重新設定密碼並再次輸入，切勿與原始密碼相同，設定完成後需重新登入數位憑證皮夾。</string>
    <string name="complete_password_setting">完成密碼設定</string>
    <string name="msg_complete_password_setting_hint">您已完成密碼設定，請使用新的密碼重新登入數位憑證皮夾。</string>
    <string name="add_new_card">新增卡片</string>
    <string name="card_application_list">卡片申請列表</string>
    <string name="government_unit">政府單位</string>
    <string name="natural_person_credential">自然人憑證</string>
    <string name="format_apply_completed_hint">已成功加入，可於管理憑證中查看與使用「%s」。</string>
    <string name="msg_biometric_has_been_new_biometric">偵測到您的生物辨識發生了異動，為確保安全請至「個人化管理」中重新啟用生物辨識。</string>
    <string name="copy_content">複製內容</string>
    <string name="already_copy_content">已複製內容</string>
    <string name="push_platform_registration_failed">推播平台註冊失敗</string>
    <string name="please_pick_one_card">請從下列清單中挑選一張授權卡片。</string>
    <string name="not_select_any_card_yet_for_validation">尚未選取任何卡片作為授權卡片</string>
    <string name="format_already_select_card_for_validation">已選擇「%s」作為授權卡片</string>
    <string name="services_from_moda_develop">服務由數位發展部開發測試</string>
    <string name="service_unknown_error">服務未知錯誤</string>
    <string name="system_basic_unknown_error">系統底層未知錯誤</string>
    <string name="format_unknown_error_reason">不明錯誤原因，請先確認網路狀態，或稍後再試。</string>
    <string name="unknown_error_reason">不明錯誤原因，請先確認網路狀態，或稍後再試。</string>
    <string name="i_dont_agree">我不同意</string>
    <string name="i_agree">我同意</string>
    <string name="contract_of_use">軟體使用規章的條款與條例</string>
    <string name="contract_of_privacy">個人資料的隱私政策</string>
    <string name="create_the_first_wallet">建立第一個皮夾</string>
    <string name="wallet_setting">皮夾設定</string>
    <string name="common_question">常見問題</string>
    <string name="report_question">問題回報</string>
    <string name="contact_customer_service">聯絡客服</string>
    <string name="customer_service_line">客服專線：</string>
    <string name="customer_service_time">客服時間：</string>
    <string name="customer_service_mailbox">客服信箱：</string>
    <string name="msg_customer_service">若有其他問題想要詢問，歡迎使用客服信箱，將有專人替您服務。</string>
    <string name="email_customer_service">service@wallet.gov.tw</string>
    <string name="phone_number">(02) 8978-6158</string>
    <string name="service_time">上班日 09:00 - 12:30｜13:30 - 18:00</string>
    <string name="question_center">問題中心</string>
    <string name="hint_input_your_wallet_name_rule">請幫您的皮夾命名，僅能輸入中文、英文與數字，不可輸入特殊符號，上限 8 個字。</string>
    <string name="ps_wallet_name_can_edit">備註：皮夾名稱可修改。</string>
    <string name="wallet_basic_information">皮夾基本資料</string>
    <string name="remark">備註：</string>
    <string name="required_items">為必填項目</string>
    <string name="wallet_form">皮夾形式</string>
    <string name="general_wallet">一般皮夾</string>
    <string name="wallet_name">皮夾名稱</string>
    <string name="hint_wallet_name_rule">僅能輸入中文、英文與數字，上限8個字。</string>
    <string name="wallet_naming">皮夾命名</string>
    <string name="my_wallet">我的皮夾</string>
    <string name="format_my_number_of_wallet">我的第%d個皮夾</string>
    <string name="hint_input_your_wallet_pin_code_rule">因您沒有設定裝置密碼，無法使用生物辨識與裝置密碼進行登入，需要設定皮夾密碼，才可登入皮夾，請妥善保管您的皮夾密碼，不要洩漏給其他人知道。</string>
    <string name="login_setting">登入設定</string>
    <string name="wallet_password_setting">皮夾密碼設定</string>
    <string name="wallet_password">皮夾密碼</string>
    <string name="input_wallet_password_again">再次輸入皮夾密碼</string>
    <string name="msg_create_login_setting_explanation">為了提升安全性，請同意將 裝置密碼 作為 數位憑證皮夾的登入密碼。\n\n\n您的裝置密碼包含 生物辨識、數字密碼 和 圖形密碼，其中 生物辨識 擁有最高安全等級。\n・若 生物辨識驗證失敗，仍可使用 裝置數字密碼 或 圖形密碼 進行登入。\n・若您的裝置 尚未設定密碼，需 建立專屬的皮夾密碼 以保障安全。\n\n\n此設定有助於確保您的數位憑證安全無虞，並同時提供 便捷且靈活的登入體驗。</string>
    <string name="login_wallet">登入皮夾</string>
    <string name="add_wallet">新增皮夾</string>
    <string name="msg_pick_wallet_type">請選擇皮夾類型，主要差異在於登入模式。</string>
    <string name="wallet_name_already_be_used">皮夾名稱已被使用</string>
    <string name="wallet_name_already_be_used_and_changing_another">皮夾名稱已被使用，請更換名字。</string>
    <string name="wallet_name_repeat">皮夾名稱重複</string>
    <string name="hint_new_wallet_name_cannot_same">請輸入新的皮夾名稱，不可與舊名稱相同。</string>
    <string name="wallet_original_name">皮夾原名稱</string>
    <string name="wallet_new_name">皮夾新名稱</string>
    <string name="please_input_wallet_name">請輸入皮夾名稱</string>
</resources>