<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/view_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/lay_toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_top">

        <include layout="@layout/include_toolbar" />
    </FrameLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/hint_new_wallet_name_cannot_same"
                android:textColor="@color/gray_06"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_wallet_password_setting_title"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="40dp"
                android:text="@string/wallet_basic_information"
                android:textColor="@color/gray_08"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_hint"
                app:layout_constraintTop_toBottomOf="@id/tv_hint" />

            <TextView
                android:id="@+id/tv_require_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/required_items"
                android:textColor="@color/gray_06"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="@id/tv_hint"
                app:layout_constraintTop_toTopOf="@id/tv_wallet_password_setting_title" />


            <ImageView
                android:id="@+id/img_require_items"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/shape_require_item_dot"
                app:layout_constraintBottom_toBottomOf="@id/tv_require_items"
                app:layout_constraintEnd_toStartOf="@id/tv_require_items"
                app:layout_constraintTop_toTopOf="@id/tv_require_items" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/remark"
                android:textColor="@color/gray_06"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_require_items"
                app:layout_constraintEnd_toStartOf="@id/img_require_items"
                app:layout_constraintTop_toTopOf="@id/tv_require_items" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/shape_r12_information_background"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_wallet_password_setting_title">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wallet_original_name"
                        android:textColor="@color/gray_08"
                        android:textSize="16dp"
                        android:textStyle="bold" />


                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:id="@+id/tv_original_wallet_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_password_please"
                        android:textColor="@color/gray_06"
                        android:textSize="16dp" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wallet_new_name"
                        android:textColor="@color/gray_08"
                        android:textSize="16dp"
                        android:textStyle="bold" />


                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/shape_require_item_dot"
                        app:layout_constraintBottom_toBottomOf="@id/tv_require_items"
                        app:layout_constraintEnd_toStartOf="@id/tv_require_items"
                        app:layout_constraintTop_toTopOf="@id/tv_require_items" />


                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="4dp">

                    <EditText
                        android:id="@+id/et_wallet_name"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/please_input_wallet_name"
                        android:imeOptions="actionDone"
                        android:maxLength="8"
                        android:nextFocusDown="@id/btn_confirm" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tv_wallet_name_hint_or_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/hint_wallet_name_rule"
                    android:textColor="@color/gray_06"
                    android:textSize="14dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <TextView
        android:id="@+id/btn_confirm"
        style="@style/Theme.Digitalwallet.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_cancel"
        style="@style/Theme.Digitalwallet.Button.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="22dp"
        android:background="@null"
        android:text="@string/cancel"
        app:layout_constraintBottom_toTopOf="@id/view_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>